@@ -635,7 +635,14 @@ Each elements are regexp of field-name.")
 (defun mime-display-text/plain (entity situation)
   (save-restriction
     (narrow-to-region (point-max)(point-max))
-    (mime-insert-text-content entity)
+    (condition-case nil
+	(mime-insert-text-content entity)
+      (error
+       (message "Wrong Content-Transfer-Encoding: %s"
+		(mime-entity-encoding entity))
+       (if (fboundp 'mime-entity-body)
+	   (insert (mime-entity-body entity))
+	 (insert ""))))
     (run-hooks 'mime-text-decode-hook)
     (goto-char (point-max))
     (if (not (eq (char-after (1- (point))) ?\n))
